# finpro_alprog

./: .gitignore  CMakeLists.txt  QUICK_REFERENCE.txt  README.md  demo.bat
include/: AnomalyDetector.hpp  Client.hpp  DataManager.hpp  DataStorage.hpp  QueryCommon.hpp  SensorData.hpp  Server.hpp  main.hpp
src/: Client.cpp  Server.cpp  abc.cpp  main.cpp
src/data_processing/: AnomalyDetector.cpp
src/query_sync/: DataManager.cpp
src/storage/: DataStorage.cpp
tests/: CMakeLists.txt  test_anomaly_detector.cpp  test_client.cpp  test_data_manager.cpp  test_data_storage.cpp  test_server.cpp
